--- a/CursoWindowsForms/Properties/Resources.resx
+++ b/CursoWindowsForms/Properties/Resources.resx
@@ -157,4 +157,10 @@
   <data name="Frm_ValidaSenha" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Frm_ValidaSenha.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Ponto_de_Interrogacao_Imagem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\Ponto_de_Interrogacao.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Ponto_de_Interrogacao_Icone" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\Ponto_de_Interrogacao.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
