--- a/CursoWindowsForms/Properties/Resources.resx
+++ b/CursoWindowsForms/Properties/Resources.resx
@@ -187,4 +187,10 @@
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ExcluirBarra" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\ExcluirBarra.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LimparBarra" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\LimparBarra.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
