--- a/CursoWindowsForms/Frm_Busca.resx
+++ b/CursoWindowsForms/Frm_Busca.resx
@@ -117,82 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="Mnu_Principal.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="Tls_Principal.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="Iml_Imagens.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>169, 17</value>
-  </metadata>
-  <data name="Iml_Imagens.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="salvarToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABI
-        DgAAAk1TRnQBSQFMAgEBCAEAAaABAAGgAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AEwAB8wET
-        CgAGWBAAARQCZgEQCWYBFQFmAUMEAAH/A24B7QFKAesBuwHyAf8BEwHzBQAB/wS7AlgBegFSAlgQAAEH
-        AmwBEQVsAWYBQwJmAmwBFQUAAf8B8QEHAe8CuwHxAQkBuwH/CAAB/wGRAQACWAF5AesCWAEAA5oCegpZ
-        Af8BZgVsAUMB6wFmBWwBEQQAAf8DBwHvAbsC8AHyAQkB8gcAAggCuwZYAQADmgN6CVkBAAETAWYDbAFD
-        Av8B6wFmA2wBQwH/AwABvAQHAe8BuwHwArwB8QEJBgABCAG1ARICFAG7AfcB/wEAAQcCAASaA3oIWQIA
-        AfQCvAHvBP8BEAK8AfEGAAQHAe8BuwO8AbsB9AYAAQgCEgIUARMB9wH/AQABBwIABZoDegdZBAAB/wHs
-        BPABvAEVCQAB8wIHAe0BtQS7BwABCAISAxQB7wH3Ae8BBwIABpoFegJZAnoEAAG8Bv8B6ggAAf8CBwPt
-        AQAB/wkAAf8C6gMTAf8B8QHwAwAHmgh6BAAB6gb/AeoB9AcAAf8DBwH3Ae0MAALqAxIGAAGgCJoGegMA
-        AQcB7Qb/AeoB6wYAAfQB7wMHAvcB/woAARkC6gISAeoB9AUAAb0BoA2aAwAB9AESAf8BEAL/AesB7QHq
-        AREHAAHvAwcD9wkAAbsBjQEHAuoBEgEHAbQBCAQAAr0BoAyaAwAB/wEVBv8B6gEVBwAB7wMHA/cIAAH0
-        AeoBEwESAZIBtgGTAhMBCQQAAvYB9ALzAfIBwwiaAwAB9AFKBgcBEwFLBwAB8QMHA/cIAAEIARMB8ATy
-        AfQBvAHqAf8DAAZZAf8LAAFDAXkGegJKCAADBwP3CQABGQe7AfIEAAVZAZ8MAAFzB3oBEgH/CAAB/wIH
-        AfcBBykAAXQHegEUNwAH7AEHDwAB/wNTAf8LAAHzBHQB/woAAf8DUwH/FQAFbgdTAwAB8gLxBPMBdATx
-        AXQCAAFYBgAHUxQAAQcDbgFLAVMBbgNTAfQBUwMAAfID8QLzApkC8QHyAfEBdAIAAfMBWAEAARoBWAIA
-        AVMB9ANTAfQBUwUAAfQEvAHwCgAEbgLrA1MFAAHyAvECvAHwAXQBGgHxAe0B7wHxAXQDAAHzBFgDAANT
-        BQAB8we8AQAC/wgAAXoBWQEAAVkB9gNTBQAB8gLxAXgBVwHzARsBdAHxAbwC8QF0AwABnwF6BDgCAANT
-        BAAB8AG8AXUCdAK8Af8BAAPxAfIHAAF6AVkBAAFZAfYBvQJTBQAB8gPxAVcBeAHzAnQBGgGZAXQB8wMA
-        A3oCOAFYAVkBAAG9AlMDAAH/A7wBdQEHAbwCAAH/BPEHAAF6AVkBAAFZAfYCAAF6BAACeAVXA/ABdAGZ
-        BQABGgN6BFgCAAF6AwACvAF5AZkDvAH0AQAF8QHyBgABWAFZAQABWQH2BwACeAVXAXgE8wYAAZ8DegQ4
-        BQABvAF5AlMEvAHwBfEB8gUABjgBWQYAAXgCVgLkAlcB8QTzBwABmgN6BDgEAAa8AngC8QPbAfEB8wYA
-        AvYBAAG9CQAB8gLxAbwBVwGYAgcB8ALzCAABnwN6BFgDAAH0ArwBfgE4AX4BvAFWAvEBnQJQAewIAAJZ
-        ATgJAAHyAvEBeAFXA/AB8gLzCQABnwN6BFgDAALxAzgB8QFWAXgBVgF4AfIB9AJQBgAB9gFZAjgJAAHy
-        CPEC8woAAZoDegI4BQAB8gTxAXgBVgF4AZgB8gH0AewBUAUAAaACWQE4AnoB9AcAAfII8QHyAfMLAAGa
-        AnoCOAcAAfIE8QFWBPMBeAgAATgKAAHyCfEB8wwAAZ8BGgEAAfQB9gsAAXgBVgHyAfQBcgFQCAABvQsA
-        Cv8NAAH/DgAB/wF4AfEB8gFQAZg8AAGYAXgB/wEAAUIBTQE+BwABPgMAASgDAAFAAwABMAMAAQEBAAEB
-        BQABgAEBFgAD/4EAAf8B/AH/AcAC/wIAAfABAAH4AQAC/wIAAfgBAQH+AUABgAMAAfABAQH8AQABgAEA
-        AYABAAHgAQEB+AEFAYABAAHAAQMB8AEBAfgBBQGAAQAB8AEPAfgBAwH4AQEBgAEAAfABDwHwAS8B+AED
-        AYABAAHwAQcB8AE/AfwBHwGAAQAB4AEHAeABHwH4AQ8BgAEAAeABBwHwAR8B8AEHAYABAAHgAQcB8AEf
-        AeABBwGAAQAB4AEHAfABHwHgAQMBgAH/AeABBwH4AR8B8AEHAYEB/wHgAQcB+AE/BP8B4AEPBv8B4AEf
-        Af8BwQH/AcAB/wHBAv8B8AEAAeABAAHfAYAC/wHwAQAB4AEAAckBgAH4AR8B+AEDAeABAAHgAeMB4AET
-        AfwBgwHgAQAB4AFjAcABIQH8AYMB4AEAAeABIwGAAcEB/AGbAcABAwHgARsBgAFAAfwBnwHAAQMB8AEP
-        AYABAAH4AQ8BwAEDAfgBBwGAAQAB/AG/AeABAwH8AQMBgAEBAf4BPwHgAQMB/gEBAcABAAH8AT8B4AED
-        Af8BAwHgAQAB+AEPAeABAwH/AYMB+AEAAf8BfwHgAQMB/wHJAf8BwAH/AX8B8AEDAf8B7wH/AcAH/wHx
-        Cw==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAInSURBVDhPrZLfS5NhFMfff8H7boIuuq2pMZyL6eAt11BW
+        DcOK6NcbaZamyzRJsTKN9qYbaFOcOmm12ohNNPIHmCIlokwlKzNXtMShpthEMPjGeaT3YbvYRXTgXH4+
+        5znf5wjC/6jeniioA/4N+LzreOpeRWdHBC2ORdht3yFbQ7hfO4/qqk+oKH+P0pJpXLsahCIgcHAAsDVu
+        IVFtbm3DkDuIE7kvWSsC74s1Jqiv+xnPKEVwZHUTB02voFJJMB/3cIH7yQoTVFf9iOdY/YW/hNeQbAyg
+        /OYCjpq6uMDZtsQENyyf49kYeGougr2iF8VFs8jJdnJBc1OYCQqvTCeER4Nh7NK5IUnjMBodXNDY8I0J
+        pIvjCeGBsa9ISuvAyVNvkJVl54IH9Qvo7wN6e4Az597BfHqEpU2B0c70bJq8Aw/hmPk1RFHmgjs1c+gO
+        AD4v0OX6Ddn6C7X3llmoFBjtXJAfVOAjOX7o9XVccKtiFp5nQLtzG3ZbFIa8opg2nbUg73LlDpzth/6w
+        BzpdDRdYSmfQ7gQaHkXZZIIEQUCyRsTExyXMzC9DKrmLTIOPwZoMF7TaSi6gs3Q8hvJsEhB8qewhPoRW
+        EFpcx/XbMlJ0LmgyOpGS3gpNWhkXFORPQrZuMHiP3oPd+0U87x5GoG8U/UNjGHk7gUNGM1TaNqSmt2Kf
+        uhlqdTEXUF04P8zOky6MjoT+mb6K0qbAaGeaSk3wgdTCWMG/1h9OtDjF55RJfQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAUAEBAAAAEAIABoBAAAVgAAABgYAAABACAAiAkAAL4EAAAgIAAAAQAgAKgQAABGDgAAMDAAAAEA
