--- a/CursoWindowsForms/Properties/Resources.resx
+++ b/CursoWindowsForms/Properties/Resources.resx
@@ -193,4 +193,10 @@
   <data name="LimparBarra" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\LimparBarra.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bank" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\bank.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bank_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\bank (1).ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
